--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,13 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.*",
+        "scrutinizer/ocular": "~1.1"
+    },
     "autoload": {
         "psr-4": {
-            "janisto\\environment\\": ""
+            "janisto\\environment\\": "src"
         }
     }
 }
