--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ php:
   - hhvm
 
 install:
-  - travis_retry composer self-update
+  - travis_retry composer self-update && composer --version
   - travis_retry composer global require "fxp/composer-asset-plugin:1.0.0"
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --prefer-dist --no-interaction
 
 script:
