--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -27,6 +27,7 @@ tools:
             standard: PSR2
         filter:
             paths: ['src']
+    php_sim: false
     php_loc:
         enabled: true
         excluded_dirs: [vendor, tests, examples]
