Disable Copy/Paste Detector

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -27,10 +27,12 @@ tools:
             standard: PSR2
         filter:
             paths: ['src']
-    php_sim: false
     php_loc:
         enabled: true
         excluded_dirs: [vendor, tests, examples]
+    # PHP Similarity Analyzer and Copy/paste Detector cannot be used at
+    # the same time right now. Make sure to either remove, or disable one.
+    php_sim: true
     php_cpd:
-        enabled: true
+        enabled: false
         excluded_dirs: [vendor, tests, examples]
