--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "yiisoft/yii2": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "~4.5",
         "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
