--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+env:
+  global:
+    secure: UwdKDjxRCHfj2nCYrdHgYx8MkfnL/P23vSBJcbWQsdf64uIJLynyJ6tpUdurdHV8se+/1S+YvASBsfumJIMiCcwLaAgwmO3z+HYwfZvEWb4HT1kjuUnz13ZQwswlb6SFQJEPp0gb1zKthjGjdFupWLieqLwjerD/gs91NFC2ycI=
+
 language: php
 
 php:
@@ -7,13 +11,15 @@ php:
   - hhvm
 
 install:
+  - travis_retry composer config -g github-oauth.github.com $GITHUB_COMPOSER_AUTH
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:1.0.0"
+  - travis_retry composer global require "fxp/composer-asset-plugin:~1.0.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --prefer-dist --no-interaction
 
 script:
-  - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpunit; fi
 
 after_script:
-  - php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
