--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ php:
   - 7.0
   - hhvm
 
+sudo: false
+
 install:
   - travis_retry composer config -g github-oauth.github.com $GITHUB_COMPOSER_AUTH
   - travis_retry composer self-update && composer --version
