--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,15 @@ php:
   - 7.0
   - hhvm
 
+matrix:
+  fast_finish: true
+
 sudo: false
+
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
 
 install:
   - travis_retry composer config -g github-oauth.github.com $GITHUB_COMPOSER_AUTH
